force-app/main/default/objects/GitHub_Settings__mdt/GitHub_Settings__mdt.object-meta.xml
<CustomObject>
    <label>GitHub Settings</label>
    <pluralLabel>GitHub Settings</pluralLabel>
</CustomObject>