force-app/main/default/objects/GitHub_Settings__mdt/fields/Personal_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Personal_Access_Token__c</fullName>
    <label>Personal Access Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>