force-app/main/default/objects/GitHub_Settings__mdt/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <label>Repository Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>