force-app/main/default/objects/GitHub_Settings__mdt/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <label>Repository Owner</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>