force-app/main/default/objects/GitHub_Settings__mdt/fields/Target_Branch__c.field-meta.xml
<CustomField>
    <fullName>Target_Branch__c</fullName>
    <defaultValue>&quot;staging&quot;</defaultValue>
    <label>Target Branch</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>